# OBC_Software

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CheckGit.cmake  LICENSE  README.md  atmel_samv71_xplained_ultra.cfg  conan-arm-profile  conanfile.py  git_version.h  parameter_database.xlsx  prameter_database.xlsx  update_database.py
AutoGenerated.X/: mcc-manifest-autosave.yml  mcc-manifest-generated-success.yml
AutoGenerated.X/nbproject/: configurations.xml
inc/: FreeRTOSConfig.h  general_definitions.hpp  main.h
inc/FreeRTOSTasks/: AmbientTemperatureTask.hpp  CANGatekeeperTask.hpp  CANParserTask.hpp  CANTestTask.hpp  HeartbeatTask.hpp  HousekeepingTask.hpp  MCUTemperatureTask.hpp  MRAMTask.hpp  MemoryManagementTask.hpp  NANDTask.hpp  OnBoardMonitoringTask.hpp  PayloadGatekeeperTask.hpp  PayloadTestTask.hpp  StatisticsReportingTask.hpp  TCHandlingTask.hpp  Task.hpp  TaskConfigs.hpp  TestTask.hpp  TimeBasedSchedulingTask.hpp  TimeKeepingTask.hpp  UARTGatekeeperTask.hpp  WatchdogTask.hpp
inc/Helpers/: FreeRTOSHandlers.hpp  HelperFunctions.hpp  SoftwareTimers.hpp  mutex_Handler.h
inc/Platform/: ECSS_Configuration.hpp  LCLDefinitions.hpp  OBC_Definitions.hpp  Peripheral_Definitions.hpp
inc/Platform/ADM/: adm_configs.hpp  adm_driver.hpp
inc/Platform/CAN/: ApplicationLayer.hpp  Driver.hpp  Frame.hpp  TPProtocol.hpp
inc/Platform/Parameters/: AcubeSATParameters.hpp  BootCounter.hpp  CommonParameters.hpp  Definitions.hpp  HousekeepingService.hpp  ParameterStatisticsService.hpp  PeakSatParameters.hpp
inc/Platform/RS422/: Payload_Message.hpp  RS422_Driver.hpp
lib/FreeRTOS/: FreeRTOSConfig.h
myenv/: pyvenv.cfg
src/: main.c  main.cpp  mutex_Handler.cpp  mutex_Handler.h  stub.c  stub.h
src/FreeRTOSTasks/: AmbientTemperatureTask.cpp  CANGatekeeperTask.cpp  CANParserTask.cpp  CANTestTask.cpp  HeartbeatTask.cpp  HousekeepingTask.cpp  MCUTemperatureTask.cpp  MRAMTask.cpp  MemoryManagementTask.cpp  NANDTask.cpp  OnBoardMonitoringTask.cpp  PayloadGatekeeperTask.cpp  PayloadTestTask.cpp  StatisticsReportingTask.cpp  TCHandlingTask.cpp  TestTask.cpp  TimeBasedSchedulingTask.cpp  TimeKeepingTask.cpp  UARTGatekeeperTask.cpp  WatchdogTask.cpp
src/Helpers/: mutex_Handler.cpp  stub.c
src/Platform/: Logger.cpp  Service.cpp  TimeGetter.cpp
src/Platform/ADM/: adm_driver.cpp
src/Platform/CAN/: ApplicationLayer.cpp  Driver.cpp  TPProtocol.cpp
src/Platform/Parameters/: BootCounter.cpp
src/Platform/RS422/: RS422_Driver.cpp
src/Platform/Services/: HousekeepingService.cpp  OnBoardMonitoringService.cpp  ParameterService.cpp  ParameterStatisticsService.cpp
src/config/default/: ATSAMV71Q21B.ld  FreeRTOSConfig.h  configuration.h  definitions.h  exceptions.c  freertos_hooks.c  harmony-manifest-failure.yml  initialization.c  interrupts.c  interrupts.h  pin_configurations.csv
src/config/default/default.mhc/: GraphSettings.yml  HarmonyCore.yml  afec0.yml  core.yml  drv_i2c.yml  mcan0.yml  mcan1.yml  project.yml  pwm0.yml  rstc.yml  rtt.yml  settings.yml  smc.yml  sys_time.yml  tc0.yml  twihs0.yml  twihs1.yml  twihs2.yml  uart0.yml  uart2.yml  usart1.yml
src/config/default/peripheral/afec/: plib_afec0.c
src/config/default/peripheral/clk/: plib_clk.c
src/config/default/peripheral/mcan/: plib_mcan0.c  plib_mcan0.h  plib_mcan1.c  plib_mcan1.h
src/config/default/peripheral/nvic/: plib_nvic.c
src/config/default/peripheral/pio/: plib_pio.c  plib_pio.h
src/config/default/peripheral/rtt/: plib_rtt.c
src/config/default/peripheral/smc/: plib_smc.c
src/config/default/peripheral/systick/: plib_systick.c
src/config/default/peripheral/tc/: plib_tc0.c  plib_tc0.h
src/config/default/peripheral/twihs/master/: plib_twihs0_master.c  plib_twihs1_master.c  plib_twihs2_master.c
src/config/default/peripheral/uart/: plib_uart0.c  plib_uart2.c
src/config/default/peripheral/xdmac/: plib_xdmac.c
src/packs/ATSAMV71Q21B_DFP/: samv71q21b.h
